force-app/main/default/objects/Integration_Service__mdt/Integration_Service__mdt.object-meta.xml
<CustomObject>
    <label>Integration Service</label>
    <pluralLabel>Integration Services</pluralLabel>
</CustomObject>