force-app/main/default/objects/Integration_Service__mdt/fields/Authentication_Type__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Type__c</fullName>
    <label>Authentication Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>