force-app/main/default/objects/Integration_Service__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
                <default>true</default>
                <label>Test</label>
            </value>
            <value>
                <fullName>Prod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>