force-app/main/default/objects/Integration_Service__mdt/fields/IntegrationType__c.field-meta.xml
<CustomField>
    <fullName>IntegrationType__c</fullName>
    <label>IntegrationType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rest</fullName>
                <default>true</default>
                <label>Rest</label>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>