force-app/main/default/objects/Integration_Service__mdt/fields/MethodType__c.field-meta.xml
<CustomField>
    <fullName>MethodType__c</fullName>
    <label>MethodType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>