force-app/main/default/objects/Integration_Service__mdt/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <label>Source System</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>