force-app/main/default/objects/Integration_Service__mdt/fields/Targetsystem__c.field-meta.xml
<CustomField>
    <fullName>Targetsystem__c</fullName>
    <label>Target system</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>