force-app/main/default/objects/Integration_Service__mdt/fields/WebServiceName__c.field-meta.xml
<CustomField>
    <fullName>WebServiceName__c</fullName>
    <label>WebServiceName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>