force-app/main/default/objects/Integration_Service__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Authentication_Type__c</columns>
    <columns>UserName__c</columns>
    <columns>Password__c</columns>
    <columns>WebServiceName__c</columns>
    <columns>MethodType__c</columns>
    <columns>IntegrationType__c</columns>
    <columns>SourceSystem__c</columns>
    <columns>Targetsystem__c</columns>
    <columns>RequestType__c</columns>
    <columns>EndPoint__c</columns>
    <columns>Content_Type__c</columns>
    <columns>Environment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>